{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 166,
  "lineage": "6f629d2c-f688-9398-16d3-8f78949103e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04581fbf744a7d11f",
            "arn": "arn:aws:ec2:us-east-1:126400498530:instance/i-07f094876416d3981",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f094876416d3981",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0664be28c741015e2",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0492f797b4a4bd7cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b015a2700025ab",
            "tags": {
              "Name": "appserver-1a",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "appserver-1a",
              "env": "dev",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084e7955e401bd870"
            ]
          },
          "dependencies": [
            "aws_security_group.app-server",
            "aws_subnet.private-1a",
            "aws_vpc.utc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c39f71452c08778",
            "arn": "arn:aws:ec2:us-east-1:126400498530:instance/i-0262026162a53ff04",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0262026162a53ff04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8fc9ee4f8a4971b",
            "private_dns": "ip-10-0-2-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c12a56810c7a1d11",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2bbc0002486e3f6",
            "tags": {
              "Name": "appserver-1b",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "appserver-1b",
              "env": "dev",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084e7955e401bd870"
            ]
          },
          "dependencies": [
            "aws_security_group.app-server",
            "aws_subnet.private-1b",
            "aws_vpc.utc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "utc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:internet-gateway/igw-0da26763a11c5111f",
            "id": "igw-0da26763a11c5111f",
            "owner_id": "126400498530",
            "tags": {
              "Name": "utc-internet-gateway",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-internet-gateway",
              "env": "dev",
              "team": "config management"
            },
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:route-table/rtb-05396cf19e6008b5f",
            "id": "rtb-05396cf19e6008b5f",
            "owner_id": "126400498530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "utc-private-route-table",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-private-route-table",
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:route-table/rtb-0cae50885bb8073b6",
            "id": "rtb-0cae50885bb8073b6",
            "owner_id": "126400498530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "utc-public-route-table",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-public-route-table",
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0278efcbe03d9c603",
            "route_table_id": "rtb-0cae50885bb8073b6",
            "subnet_id": "subnet-0f0bedd9182387952"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e093964a4b44c6eb",
            "route_table_id": "rtb-0cae50885bb8073b6",
            "subnet_id": "subnet-00d3e1fd203c0c60c"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e238edb961bc8c1e",
            "route_table_id": "rtb-0cae50885bb8073b6",
            "subnet_id": "subnet-0de6353a7dfbb1bf6"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:security-group/sg-0aa2c6cc80fa01a82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa2c6cc80fa01a82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg-20230405021115884400000003",
            "name_prefix": "alb-sg-",
            "owner_id": "126400498530",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:security-group/sg-084e7955e401bd870",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-084e7955e401bd870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-server-sg20230405021115216600000001",
            "name_prefix": "app-server-sg",
            "owner_id": "126400498530",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a556d298c07fc7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:security-group/sg-0333bce8a76bc2af0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0333bce8a76bc2af0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b61b2ca781672a2"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa2c6cc80fa01a82"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg-20230405021118317100000006",
            "name_prefix": "app-sg-",
            "owner_id": "126400498530",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:security-group/sg-05b61b2ca781672a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b61b2ca781672a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "66.189.125.129/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg-20230405021115308700000002",
            "name_prefix": "bastion-sg-",
            "owner_id": "126400498530",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:security-group/sg-0ecb4b70044ba030b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecb4b70044ba030b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0333bce8a76bc2af0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-20230405021120752800000007",
            "name_prefix": "db-sg-",
            "owner_id": "126400498530",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-0d6b015a2700025ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b015a2700025ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a556d298c07fc7e"
          },
          "dependencies": [
            "aws_vpc.utc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-0b2bbc0002486e3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2bbc0002486e3f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a556d298c07fc7e"
          },
          "dependencies": [
            "aws_vpc.utc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-0f0bedd9182387952",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0bedd9182387952",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-private-subnet-1a",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-private-subnet-1a",
              "env": "dev",
              "team": "config management"
            },
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-03c846b5c05905ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c846b5c05905ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-private-subnet-1b",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-private-subnet-1b",
              "env": "dev",
              "team": "config management"
            },
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-00d3e1fd203c0c60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d3e1fd203c0c60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-public-subnet-1a",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-public-subnet-1a",
              "env": "dev",
              "team": "config management"
            },
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:subnet/subnet-0de6353a7dfbb1bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6353a7dfbb1bf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126400498530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-public-subnet-1b",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-public-subnet-1b",
              "env": "dev",
              "team": "config management"
            },
            "vpc_id": "vpc-0ce415467845cd97e"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:vpc/vpc-01e314c6263157f54",
            "cidr_block": "10.0.0.0/16",
            "dhcp_options_id": "dopt-07b275c4acf2abedf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01e314c6263157f54",
            "instance_tenancy": "default",
            "owner_id": "126400498530",
            "tags": {
              "Name": "bastion_server"
            },
            "tags_all": {
              "Name": "bastion_server"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "utc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:vpc/vpc-08a556d298c07fc7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d377800acef2078b",
            "default_route_table_id": "rtb-06b8bd0825b9b0c29",
            "default_security_group_id": "sg-0069b01a303466557",
            "dhcp_options_id": "dopt-07b275c4acf2abedf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a556d298c07fc7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b8bd0825b9b0c29",
            "owner_id": "126400498530"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "utc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126400498530:vpc/vpc-0ce415467845cd97e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-098bd6074e2af0ccc",
            "default_route_table_id": "rtb-08f6a5d3b790f3b2b",
            "default_security_group_id": "sg-0aef01d171ab46822",
            "dhcp_options_id": "dopt-07b275c4acf2abedf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce415467845cd97e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f6a5d3b790f3b2b",
            "owner_id": "126400498530",
            "tags": {
              "Name": "utc-vpc",
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "Name": "utc-vpc",
              "env": "dev",
              "team": "config management"
            }
          }
        }
      ]
    }
  ]
}